<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@color/white">

    <TextView android:text="@string/hello_world"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/string_one"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:paddingTop="15dp"
        android:textSize="20sp"
        android:paddingBottom="15dp"
        android:autoText="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/application"
        android:id="@+id/getApplication"
        android:layout_below="@+id/string_one"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_notification"
        android:id="@+id/testNotification"
        android:layout_below="@+id/getApplication"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_bound"
        android:id="@+id/testBound"
        android:layout_below="@+id/testNotification"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_sync"
        android:id="@+id/testSync"
        android:layout_below="@+id/testBound"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
